fix(announcement bar): better contrast

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -192,7 +192,7 @@ iframe {
 [class*='announcementBar_'] {
   --docusaurus-announcement-bar-height: 3.5rem;
 
-  background: linear-gradient(90deg, #440f14, #5e1219 15%, #03060b 35%, #03060b 45%, #5e1219 85%, #440f14);
+  background: linear-gradient(90deg, #440f14, #5e1219 15%, #000 35%, #000 45%, #5e1219 85%, #440f14);
 
   &:hover,
   &:focus,
